znai-reactjs/src/doc-elements/images/AnnotatedImage.css
/*
 * Copyright 2020 znai maintainers
 * Copyright 2019 TWO SIGMA OPEN SOURCE, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.znai-annotated-image-container {
    margin-top: 30px;
    margin-bottom: 30px;
    overflow-x: auto;
    overflow-y: hidden;
}

.znai-annotated-image-container.wide {
    overflow: visible;
}

.znai-annotated-image-align.center {
    text-align: center;
}

.znai-annotated-image-container.inlined {
    display: inline;
    margin: 15px;
}

.znai-annotated-image-container .znai-container-title-wrapper {
    background: var(--znai-image-title-background-color);
}

.znai-annotated-image-container.align-left .znai-container-title-wrapper,
.znai-annotated-image-container.align-right .znai-container-title-wrapper {
    width: var(--znai-image-content-width);
}

.znai-annotated-image-container.align-right .znai-container-title-wrapper {
    margin-left: auto;
}

.znai-zoom-container .znai-annotated-image-container {
    overflow: visible;
}

.znai-image-title {
    padding: 4px 16px;
    font-size: var(--znai-smaller-text-size);

    color: var(--znai-image-title-color);
}

.znai-image-preview-coordinates {
    padding: 4px 16px;
    font-size: var(--znai-smaller-text-size);

    background-color: var(--znai-image-title-background-color);
    color: var(--znai-image-title-color);
}

.znai-annotated-image {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.znai-annotated-image.border {
    box-sizing: border-box;
    border: 1px solid var(--znai-image-border-color);
}

.znai-presentation-slide-appeared .znai-annotation-badge circle {
    animation: badge-circle-presentation-appear;
    animation-fill-mode: forwards;
    animation-duration: 0.5s;
}

.znai-annotated-image-align.left .znai-annotated-image {
    margin-left: 0;
    margin-right: auto;
}

.znai-annotated-image-align.right .znai-annotated-image {
    margin-left: auto;
    margin-right: 0;
}

.znai-image-fit,
.znai-image-scaled-down {
    cursor: zoom-in;
}

.znai-zoom-overlay .znai-annotated-image-container {
    margin: 0;
}

@keyframes badge-circle-presentation-appear {
    from {
        transform: scale3d(4, 4, 1);
    }

    to {
        transform: scale3d(1, 1, 1);
    }
}

